# home-archive-2022-01

./:  someone-said.html  .gitignore  README.md  index.html  main.css  main.css.map  main.scss  post.html
assets/: main.scss
docs/: CNAME  index.html
docs/experiments/synced-lyrics/: index.html  main.css  main.js
docs/posts/: from-hello-world-to-hero.html  jekyll-ripoff-project.html  resume.html
docs/static/: main.css
docs/static/js/: main.js
experiments/synced-lyrics/: README.md  index.html  insert-lyrics.js  main.scss  manifest.json  package-lock.json  package.json  the-box_roddy-rich.lrc
layouts/: experiment.liquid  home.liquid  main.liquid  post.liquid
posts/: from-hello-world-to-hero.md  i-build-a-jekyll-ripoff.md  my-resume.md
tools/myjekyllripoff/: .gitignore  Cargo.toml  README.md  hello-world.md  post.liquid
tools/myjekyllripoff/src/: main.rs
