[package]
name = "myjekyllripoff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.12.1"
regex = "1.5.4"
liquid = "0.23.1"
rsass = "0.23.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
notify = "4.0.17"
chrono = { version = "0.4.19", features = ["serde"] }
scraper = "0.12.0"
